# dawarich-mcp

./: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
docs/superpowers/plans/: 2026-07-06-dawarich-mcp-server.md
src/dawarich_mcp/: __init__.py  __main__.py  client.py  config.py  server.py  tools.py
tests/: test_client.py  test_config.py  test_main.py  test_server.py  test_tools.py
